--- a/motion/templates/index.html
+++ b/motion/templates/index.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block content_head %}
-    <div id="user-compose-friends" class="pkg">
+    <div id="user-compose-friends" class="design-compose-background pkg">
         {% if user.is_authenticated %}
         <div id="user-compose-friends-inner" class="pkg">
             {% include "bits/compose_form.html" %}
