--- a/motion/templates/widgets/ads.html
+++ b/motion/templates/widgets/ads.html
@@ -1,5 +1,5 @@
 <div class="widget-ad widget">
-    <h3>Sponsored by...</h3>
+    <h3 class="design-highlight-color">Sponsored by...</h3>
     <div class="widget-content">
         <iframe id="ad-1-iframe" class="ad-iframe" src="http://ads.sixapart.com/show/?width=300&amp;qct=0&amp;search_term=&amp;r=0.554367570096801&amp;channel={{ sixapart_ad_channel|iriencode }}&amp;age=&amp;curl=&amp;url={{ request.build_absolute_uri|iriencode }}&amp;id=ad-1&amp;pos=&amp;f=AdEngine.insertAdResponse&amp;gender=&amp;cbg=&amp;country=&amp;interests=&amp;language=en&amp;cborder=&amp;clink=&amp;accttype=STANDARD&amp;height=250&amp;tags=&amp;p=vox&amp;type=&amp;ctext="
             style="width: 300px; height: 250px;"
