--- a/motion/templates/widgets/elsewhere.html
+++ b/motion/templates/widgets/elsewhere.html
@@ -1,6 +1,6 @@
 {% if elsewhere %}
 <div id="elsewhere" class="widget-elsewhere widget pkg">
-    <h3>Elsewhere</h3>
+    <h3 class="design-highlight-color">Elsewhere</h3>
     <div class="widget-content">
         <ul class="action-listing">
             {% for account in elsewhere %}
