--- a/motion/templates/widgets/followers.html
+++ b/motion/templates/widgets/followers.html
@@ -3,7 +3,7 @@ Template used for displaying a list of the users followers.
 {% endcomment %}
 
 <div class="widget-followers widget pkg {% if not followers %}empty{% endif %}">
-    <h3>Followers</h3>
+    <h3 class="design-highlight-color">Followers</h3>
     <div class="widget-content">
         <div class="summary">
             <span class="count">
