--- a/motion/templates/widgets/members.html
+++ b/motion/templates/widgets/members.html
@@ -1,5 +1,5 @@
 <div class="widget widget-members">
-    <h3>{{ memberships.total_results }} Member{{ memberships.total_results|pluralize }}</h3>
+    <h3 class="design-highlight-color">{{ memberships.total_results }} Member{{ memberships.total_results|pluralize }}</h3>
     <div class="widget-content members">
         <ul>
         {% for membership in memberships %}
