--- a/motion/templates/banners/header.html
+++ b/motion/templates/banners/header.html
@@ -6,10 +6,10 @@
 
             {# Use h1 and h2 html tags on the main index of the site as the title, use divs on all other pages where there are page titles. #}
             {% ifequal request.path url_home %}
-                <h1 id="header-name"><a href="{% url home %}" accesskey="1">{{ request.group.display_name }}</a></h1>
+                <h1 id="header-name"><a href="{% url home %}" accesskey="1" class="design-logo">{{ request.group.display_name }}</a></h1>
                 <h2 id="header-description">{# group.tagline #}</h2>
             {% else %}
-                <div id="header-name"><a href="{% url home %}" accesskey="1">{{ request.group.display_name }}</a></div>
+                <div id="header-name"><a href="{% url home %}" accesskey="1" class="design-logo">{{ request.group.display_name }}</a></div>
                 <div id="header-description">{# group.tagline #}</div>
             {% endifequal %}
 
