--- a/motion/templates/widgets/about_site.html
+++ b/motion/templates/widgets/about_site.html
@@ -1,5 +1,5 @@
 <div class="widget-about-site widget">
-    <h3 class="widget-header">About</h3>
+    <h3 class="design-highlight-color">About</h3>
     <div class="widget-content">
         You are using the Potion alpha, codename Orchid. Please report any bugs/unexpected behavior to chall@sixapart.com. 
     </div>
