--- a/motion/templates/widgets/following.html
+++ b/motion/templates/widgets/following.html
@@ -1,5 +1,5 @@
 <div class="widget-following widget pkg {% if not following %}empty{% endif %}">
-    <h3>Following</h3>
+    <h3 class="design-highlight-color">Following</h3>
     <div class="widget-content">
         <div class="summary">
             <label>
