--- a/motion/templates/widgets/powered_by.html
+++ b/motion/templates/widgets/powered_by.html
@@ -1,5 +1,6 @@
+{% load i18n %}
 <div class="widget-powered widget">
     <div class="widget-content">
-        Powered by <a href="#" rel="generator">space giraffe</a>
-    </div>
-</div>
+        {% blocktrans %}Powered by <a href="#" rel="generator">space giraffe</a>{% endblocktrans %}
+    </div><!-- end .widget-content -->
+</div><!-- end .widget-powered -->
