--- a/motion/templates/assets/body/favorite.html
+++ b/motion/templates/assets/body/favorite.html
@@ -1,14 +1,18 @@
 {% extends "assets/body/base.html" %}
+{% load i18n %}
 {% load date_filters %}
 
 {% block title %}{% endblock %}
 {% block media %}{% endblock %}
 {% block activity %}
-    <i>{{ event.actor.display_name }} favorited {% ifequal entry.type_id "audio" %}an{% else %}a{% endifequal %}
-    <a href="{{ entry.get_absolute_url }}">
-    {% ifnotequal entry.type_id "post" %}
-        {{ entry.type_id }}
-    {% endifnotequal %}
-    post by {{ entry.author.display_name }}</a> <abbr class="published" title="{{ event.published|date_microformat }}">{{ event.published|pithy_timesince:"on " }}</abbr>.</i>
+    {% ifequal entry.type_id "audio" %}
+    {% blocktrans with event.actor.display_name as actor_name and entry.type_label as post_type and entry.get_absolute_url as url and entry.author.display_name as author_name and event.published|date_microformat as published and event.published|pithy_timesince:"on " as timestamp %}
+    {{ actor_name }} favorited an <a href="{{ url }}">{{ post_type }} by {{ author_name }}</a> <abbr class="published" title="{{ published }}">{{ timestamp }}</abbr>.
+    {% endblocktrans %}
+    {% else %}
+    {% blocktrans with event.actor.display_name as actor_name and entry.type_label as post_type and entry.get_absolute_url as url and entry.author.display_name as author_name and event.published|date_microformat as published and event.published|pithy_timesince:"on " as timestamp %}
+    {{ actor_name }} favorited a <a href="{{ url }}">{{ post_type }} by {{ author_name }}</a> <abbr class="published" title="{{ published }}">{{ timestamp }}</abbr>.
+    {% endblocktrans %}
+    {% endifequal %}
 {% endblock %}
 {% block content %}{% endblock %}
