--- a/motion/templates/bits/compose_form.html
+++ b/motion/templates/bits/compose_form.html
@@ -1,9 +1,10 @@
+{% load i18n %}
                             <div id="compose">
                                 <div id="compose-inner">
                                     <div id="compose-content">
-                                        {% if not dwim %}
+                                        {% if not settings.use_dwim %}
                                         <p id="compose-prompt">
-                                            Add something!
+                                            {% trans "Add something!" %}
                                         </p><!-- end #compose-prompt -->
                                         {% endif %}
 
@@ -11,7 +12,7 @@
                                             <input type="hidden" id="compose-class" name="post_type" value="{{ form.post_type.data|default:"post" }}" />
                                             <input type="hidden" name="redirect_to" value="{{ settings.frontend_url }}{% url upload_complete %}" />
                                             <input type="hidden" id="compose-asset" name="asset" value="" />
-                                            {% if not dwim %}
+                                            {% if not settings.use_dwim %}
                                             <ul id="entry-types">
                                                 {% for type in settings.post_types %}
                                                 <li id="entry-{{ type.id }}"><a href="#" title="{{ type.label }}">{{ type.label }}</a></li>
@@ -19,18 +20,18 @@
                                             </ul>
                                             {% endif %}
                                             <div id="entry-fields">
-                                                {% if not dwim %}
+                                                {% if not settings.use_dwim %}
                                                 <div id="field-url" class="field" style="display:none">
                                                     {% if form.errors.url %}<div class="form-error">{{ form.errors.url|join:" " }}</div>{% endif %}
                                                     {{ form.url }}
                                                 </div>
                                                 <div id="field-file" class="field" style="display:none">
-                                                    <label id="label-audio" for="compose-file">Select audio file</label>
-                                                    <label id="label-photo" for="compose-file">Select photo file</label>
+                                                    <label id="label-audio" for="compose-file">{% trans "Select audio file" %}</label>
+                                                    <label id="label-photo" for="compose-file">{% trans "Select photo file" %}</label>
                                                     {% if form.errors.file %}<div class="form-error">{{ form.errors.file|join:" " }}</div>{% endif %}
                                                     {{ form.file }}<br />
-                                                    <em id="hint-audio">Only MP3 audio files are supported.</em>
-                                                    <em id="hint-photo">Only GIF, JPEG and PNG image files are supported.</em>
+                                                    <em id="hint-audio">{% trans "Only MP3 audio files are supported." %}</em>
+                                                    <em id="hint-photo">{% trans "Only GIF, JPEG and PNG image files are supported." %}</em>
                                                 </div><!-- end #field-file -->
                                                 <div id="field-embed" class="field" style="display:none">
                                                     {% if form.errors.embed %}<div class="form-error">{{ form.errors.embed|join:" " }}</div>{% endif %}
@@ -38,38 +39,42 @@
                                                 </div><!-- end #field-embed -->
                                                 {% endif %}
                                                 <div id="field-body" class="field">
-                                                    {% if dwim %}
+                                                    {% if settings.use_dwim %}
                                                     <div id="dwim-tip">
-                                                        Start entering stuff and the right thing happens. It's <em><strong>magical</strong></em>! <a href="#" target="_blank">Learn more...</a>
+                                                        {% blocktrans %}Start entering stuff and the right thing happens. It's <em><strong>magical</strong></em>! <a href="#" target="_blank">Learn more...</a>{% endblocktrans %}
                                                         <span id="dwim-tip-bottom"></span>
                                                     </div>
                                                     {% endif %}
                                                     {% if form.errors.body %}<div class="form-error">{{ form.errors.body|join:" " }}</div>{% endif %}
                                                     {{ form.body }}
                                                 </div>
-                                                {% if dwim %}
+                                                {% if settings.use_dwim or settings.use_titles %}
                                                 <div id="entry-fields-optional">
                                                     <div id="field-title" class="field">
                                                         {% if form.errors.title %}<div class="form-error">{{ form.errors.title|join:" " }}</div>{% endif %}
                                                         {{ form.title }}
-                                                        {# <input type="text" id="compose-title" name="title" title="Title" /> #}
                                                     </div>
+                                                    {% if settings.use_dwim %}
                                                     <div id="field-file" class="field">
-                                                        <label for="compose-file">Attach a file</label>
+                                                        <label for="compose-file">{% trans "Attach a file" %}</label>
                                                         {% if form.errors.file %}<div class="form-error">{{ form.errors.file|join:" " }}</div>{% endif %}
                                                         {{ form.file }}<br />
-                                                        {# <input type="file" name="file" title="Select file" /><br /> #}
-                                                        <em>Only MP3, GIF, JPEG and PNG files types are supported.</em>
+                                                        <em>{% trans "Only MP3, GIF, JPEG and PNG files types are supported." %}</em>
                                                     </div><!-- end #field-file -->
+                                                    {% endif %}
                                                 </div><!-- end #entry-fields-optional -->
                                                 {% endif %}
                                             </div>
                                             <p class="submit-wrapper">
-                                                {% if dwim %}
-                                                <a href="#more-options" id="more-options" class="more-options">+ more options</a>
-                                                <a href="#live-preview" id="live-preview" class="live-preview">+ live preview</a>
+                                                {% if settings.use_dwim %}
+                                                <a href="#more-options" id="more-options" class="more-options">{% trans "+ more options" %}</a>
+                                                <a href="#live-preview" id="live-preview" class="live-preview">{% trans "+ live preview" %}</a>
+                                                {% else %}
+                                                {% if settings.use_titles %}
+                                                <a href="#more-options" id="more-options" class="more-options">{% trans "+ more options" %}</a>
                                                 {% endif %}
-                                                <button id="post-submit" name="post" value="Post">Post It!</button>
+                                                {% endif %}
+                                                <button id="post-submit" name="post" value="Post">{% trans "Post It!" %}</button>
                                             </p>
                                         </form>
                                     </div><!-- end #compose-content -->
