--- a/motion/templates/bits/delete_comment.html
+++ b/motion/templates/bits/delete_comment.html
@@ -1,4 +1,4 @@
 <form id="delete-{{ comment.id }}" method="post" action="">
     <input type="hidden" name="asset-id" value="{{ comment.id }}" />
-    <button class="button-delete" type="submit" onclick="return confirm('Are you sure you want to delete this comment?');" name="delete" title="Delete Comment">Delete</button>
+    <button class="button-delete" type="submit" onclick="return confirm('{{ _("Are you sure you want to delete this comment?")|escapejs }}');" name="delete" title="Delete Comment">Delete</button>
 </form>
