--- a/motion/templates/bits/friends.html
+++ b/motion/templates/bits/friends.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div id="friends">
     <div id="friends-innner">
         <div id="compose-userpic">
@@ -10,7 +11,9 @@
         <div id="user-meta" class="pkg">
             <div id="user-username">{{ user.display_name }}</div>
             <div id="user-counts">
-                {{ actions.total_results|default:"0" }} action{{ actions.total_results|default:"0"|pluralize }}
+                {% blocktrans with actions.total_results|default:"0" as total and actions.total_results|default:"0"|pluralize as pluralize %}
+                    {{ total }} action{{ pluralize }}
+                {% endblocktrans %}
             </div>
         </div>
         {% with user as member %}
