--- a/motion/templates/error.html
+++ b/motion/templates/error.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content_body %}
-    <h1>An Error Occured</h1>
+    <h1>{% trans "An Error Occured" %}</h1>
     <div id="error-message">
         <p>{{ message }}</p>
     </div>
-    <div><a href="{% url home %}">Go home?</a></div>
+    <div><a href="{% url home %}">{% trans "Go home?" %}</a></div>
 {% endblock %}
