--- a/motion/templates/widgets/about_site.html
+++ b/motion/templates/widgets/about_site.html
@@ -1,6 +1,7 @@
+{% load i18n %}
 <div class="widget-about-site widget">
     <h3 class="design-highlight-color">About</h3>
     <div class="widget-content">
-        You are using the Potion alpha, codename Orchid. Please report any bugs/unexpected behavior to chall@sixapart.com. 
-    </div>
-</div>
+        {% trans "You are using the Potion alpha, codename Orchid. Please report any bugs/unexpected behavior to chall@sixapart.com." %}
+    </div><!-- end .widget-content -->
+</div><!-- end .widget-about-site -->
