--- a/motion/templates/widgets/followers.html
+++ b/motion/templates/widgets/followers.html
@@ -1,16 +1,19 @@
 {% comment %}
 Template used for displaying a list of the users followers.
 {% endcomment %}
+{% load i18n %}
 
 <div class="widget-followers widget pkg {% if not followers %}empty{% endif %}">
-    <h3 class="design-highlight-color">Followers</h3>
+    <h3 class="design-highlight-color">{% trans "Followers" %}</h3>
     <div class="widget-content">
         <div class="summary">
             <span class="count">
                 {{ followers.total_results }}
             </span>
             <label>
-                Follower{{ followers.total_results|pluralize }}
+                {% blocktrans with followers.total_results|pluralize as pluralize %}
+                Follower{{ pluralize }}
+                {% endblocktrans %}
             </label>
         </div>
         <ul>
@@ -25,9 +28,9 @@ Template used for displaying a list of the users followers.
         {% ifequal view "home" %}
             &gt;&gt;
         {% else %}
-            view all
+            {% trans "view all" %}
         {% endifequal %}
         </a></div>
         {% endif %}
-    </div>
-</div>
+    </div><!-- end .widget-content -->
+</div><!-- end .widget-followers -->
