--- a/motion/templates/widgets/following.html
+++ b/motion/templates/widgets/following.html
@@ -1,9 +1,10 @@
+{% load i18n %}
 <div class="widget-following widget pkg {% if not following %}empty{% endif %}">
-    <h3 class="design-highlight-color">Following</h3>
+    <h3 class="design-highlight-color">{% trans "Following" %}</h3>
     <div class="widget-content">
         <div class="summary">
             <label>
-                Following
+                {% trans "Following" %}
             </label>
             <span class="count">
                 {{ following.total_results }}
@@ -21,9 +22,9 @@
         {% ifequal view "home" %}
             &gt;&gt;
         {% else %}
-            view all
+            {% trans "view all" %}
         {% endifequal %}
         </a></div>
         {% endif %}
-    </div>
-</div>
+    </div><!-- end .widget-content -->
+</div><!-- end .widget-following -->
