--- a/motion/templates/widgets/members.html
+++ b/motion/templates/widgets/members.html
@@ -1,5 +1,10 @@
+{% load i18n %}
 <div class="widget widget-members">
-    <h3 class="design-highlight-color">{{ memberships.total_results }} Member{{ memberships.total_results|pluralize }}</h3>
+    <h3 class="design-highlight-color">
+        {% blocktrans with memberships.total_results as total and memberships.total_results|pluralize as pluralize %}
+            {{ total }} Member{{ pluralize }}
+        {% endblocktrans %}
+    </h3>
     <div class="widget-content members">
         <ul>
         {% for membership in memberships %}
@@ -8,6 +13,6 @@
             {% endwith %}
         {% endfor %}
         </ul>
-        <div class="more"><a href="{% url members %}">view all</a></div>
-    </div>
-</div>
+        <div class="more"><a href="{% url members %}">{% trans "view all" %}</a></div>
+    </div><!-- end .widget-content -->
+</div><!-- end .widget-members -->
