--- a/motion/templates/widgets/signin.html
+++ b/motion/templates/widgets/signin.html
@@ -1,15 +1,17 @@
+{% load i18n %}
 <div class="widget-sign-in widget">
     <div id="signin-widget-content" class="widget-content">
         {% if not user.is_authenticated %}
-            <a href="{% url login %}?next={{ request.path|urlencode }}">Sign In</a>
+            <a href="{% url login %}?next={{ request.path|urlencode }}">{% trans "Sign In" %}</a>
             <span class="separator">|</span>
-            Not a member? <a href="{% url register %}">Register</a>
+            {% url register as register_url %}
+            {% blocktrans %}Not a member? %} <a href="{{ register_url }}">Register</a>{% endblocktrans %}
         {% else %}
-            Hi <a href="{{ user.get_absolute_url }}">{{ user.display_name }}</a>
+            {% blocktrans with user.get_absolute_url as url and user.display_name as name %}Hi <a href="{{ url }}">{{ name }}</a>{% endblocktrans %}
             <span class="separator">|</span>
-            <a href="{{ user.get_absolute_url }}">Profile</a>
+            <a href="{{ user.get_absolute_url }}">{% trans "Profile" %}</a>
             <span class="separator">|</span>
-            <a href="{% url logout %}">Logout</a>
+            <a href="{% url logout %}">{% trans "Logout" %}</a>
         {% endif %}
     </div><!-- end .widget-content#signin-widget-content -->
 </div><!-- end .widget.widget-sign-in -->
