Spacing; MEDIA_URL to settings.media_url; added placeholder templates for terms of service/privacy; fix for member directory.

--- a/motion/templates/500.html
+++ b/motion/templates/500.html
@@ -6,16 +6,16 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="generator" content="spacegiraffe 1.0" />
-    <link rel="stylesheet" href="{{ MEDIA_URL }}themes/motion2/style.css" type="text/css" />
+    <link rel="stylesheet" href="{{ settings.media_url }}themes/motion2/style.css" type="text/css" />
     <link rel="start" href="/" title="Home" />
-    <link rel="shortcut icon" type="image/x-icon" href="{{ MEDIA_URL }}favicon.ico" />
+    <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}favicon.ico" />
     <title>{{ title }}</title>
 </head>
 
 <body id="motion" class="error">
     <p>{% trans "Whoops! Can you try that again?" %}
         <a href="/">{% trans "Return to the home page." %}</a></p>
-    <p><img src="{{ MEDIA_URL }}images/fail.png"
+    <p><img src="{{ settings.media_url }}images/fail.png"
         height="620" width="502" alt="{% trans "Spacegiraffe is having a massage" %}"
         title="{% trans "Spacegiraffe is having a massage" %}" /></p>
 </body>
