--- a/motion/templates/assets/body/comment.html
+++ b/motion/templates/assets/body/comment.html
@@ -5,7 +5,5 @@
 {% block title %}{% endblock %}
 {% block media %}{% endblock %}
 {% block activity %}
-    <i>{% blocktrans with event.actor.display_name as name and entry.get_absolute_url as url and entry.published|date_microformat as published and entry.published|pithy_timesince:"on " as timestamp %}
-        {{ name }} <a href="{{ url }}">commented</a> <abbr class="published" title="{{ published }}">{{ timestamp }}</abbr>.
-    {% endblocktrans %}</i>
+    <i>{% blocktrans with event.actor.display_name as name and entry.get_absolute_url as url and entry.published|date_microformat as published and entry.published|pithy_timesince:"on " as timestamp %}{{ name }} <a href="{{ url }}">commented</a> <abbr class="published" title="{{ published }}">{{ timestamp }}</abbr>.{% endblocktrans %}</i>
 {% endblock %}
