--- a/motion/templates/bits/friends.html
+++ b/motion/templates/bits/friends.html
@@ -11,9 +11,7 @@
         <div id="user-meta" class="pkg">
             <div id="user-username">{{ user.display_name }}</div>
             <div id="user-counts">
-                {% blocktrans with actions.total_results|default:"0" as total and actions.total_results|default:"0"|pluralize as pluralize %}
-                    {{ total }} action{{ pluralize }}
-                {% endblocktrans %}
+                {% blocktrans with actions.total_results|default:"0" as total and actions.total_results|default:"0"|pluralize as pluralize %}{{ total }} action{{ pluralize }}{% endblocktrans %}
             </div>
         </div>
         {% with user as member %}
