--- a/motion/templates/permalink.html
+++ b/motion/templates/permalink.html
@@ -35,9 +35,7 @@
     <div id="comments" class="actions comments">
         <div id="comments-list">
             <h2 class="comments-header">
-                {% blocktrans with comments.total_results as total and comments.total_results|pluralize as pluralize %}
-                    {{ total }} Comment{{ pluralize }}
-                {% endblocktrans %}
+                {% blocktrans with comments.total_results as total and comments.total_results|pluralize as pluralize %}{{ total }} Comment{{ pluralize }}{% endblocktrans %}
             </h2>
             <div id="comments-content" class="comments-content">
             {% for comment in comments %}
