--- a/motion/templates/widgets/elsewhere.html
+++ b/motion/templates/widgets/elsewhere.html
@@ -11,7 +11,7 @@
             {% endfor %}
         </ul>
         <div class="more">
-            <img src="{{ MEDIA_URL }}images/services/typepad.png" height="16" width="16" alt="TypePad" /> <a href="{{ member.typepad_url }}">{% blocktrans with member.display_name as name %}View {{ name }}&rsquo;s full TypePad profile.{% endblocktrans %}</a>
+            <img src="{{ settings.media_url }}images/services/typepad.png" height="16" width="16" alt="TypePad" /> <a href="{{ member.typepad_url }}">{% blocktrans with member.display_name as name %}View {{ name }}&rsquo;s full TypePad profile.{% endblocktrans %}</a>
         </div>
     </div><!-- end .widget-content -->
 </div><!-- end .widget-elsewhere#elsewhere -->
