Fix for publishing the non-relative timestamps.

--- a/motion/templates/assets/bits/footer.html
+++ b/motion/templates/assets/bits/footer.html
@@ -28,7 +28,7 @@
                     on {{ timestamp }}
                 {% endblocktrans %}
                 {% else %}
-                {{ timestamp }}
+                {{ entry.published|pithy_timesince }}
                 {% endif %}
                 </a>
                 {% endspaceless %}
