Added author name to comment display.

--- a/motion/templates/assets/body/comment.html
+++ b/motion/templates/assets/body/comment.html
@@ -5,5 +5,9 @@
 {% block title %}{% endblock %}
 {% block media %}{% endblock %}
 {% block activity %}
-    <i>{% blocktrans with event.actor.display_name as name and entry.get_absolute_url as url and entry.published|date_microformat as published and entry.published|pithy_timesince:"on " as timestamp %}{{ name }} <a href="{{ url }}">commented</a> <abbr class="published" title="{{ published }}">{{ timestamp }}</abbr>.{% endblocktrans %}</i>
+    <i>
+    {% blocktrans with event.actor.display_name as name and entry.get_absolute_url as url and event.object.in_reply_to.author.display_name as author and entry.published|date_microformat as published and entry.published|pithy_timesince:"on " as timestamp %}
+        {{ name }} commented on a <a href="{{ url }}">post by {{ author }}</a> <abbr class="published" title="{{ published }}">{{ timestamp }}</abbr>.
+    {% endblocktrans %}
+    </i>
 {% endblock %}
